classDiagram
direction TB
class User {
  <<abstract>>
  String userId
  String name
  String email
  String phone
  String password
  +login(String, String) boolean
}
class Policyholder {
  String ssn
  Date birthDate
  String address
  String bankAccount
  +applyInsurance()
}
class InsuranceEmployee {
  String employeeId
  String department
  int currentLoad
  +reviewEnrollment()
}
User <|-- Policyholder
User <|-- InsuranceEmployee
